Patch spoon.sh to be smarter on servers